# django-auth-starter

./: .dockerignore  .env.example  .gitignore  Dockerfile  Makefile  README.md  docker-compose.yml  pyproject.toml  requirements.txt
apps/: __init__.py
apps/authentication/: apps.py  forms.py  services.py  tokens.py  urls.py  views.py
apps/core/: apps.py  constants.py  middleware.py  utils.py  validators.py  views.py
apps/emails/: apps.py  services.py
apps/profiles/: apps.py  forms.py  services.py  urls.py  views.py
apps/users/: admin.py  apps.py  backends.py  managers.py  models.py  signals.py
apps/users/migrations/: 0001_initial.py  0002_customuser_avatar_customuser_username_and_more.py  (+1 more)
config/: asgi.py  urls.py  wsgi.py
config/settings/: base.py  dev.py  prod.py
scripts/: update_templates.py
static/css/: styles.css
templates/: base.html  home.html
templates/authentication/: activation_complete.html  activation_invalid.html  activation_sent.html  login.html  password_reset.html  password_reset_confirm.html  password_reset_done.html  register.html
templates/emails/: activation_email.html  password_reset_email.html  password_reset_subject.txt
templates/profiles/: password_change.html  profile.html  profile_update.html
tests/: conftest.py
tests/authentication/: test_login.py  test_password_reset.py  test_register.py  test_services.py
tests/core/: test_homepage.py  test_utils.py  test_validators.py
tests/profiles/: test_forms.py  test_profile_update.py
tests/users/: test_backend.py  test_managers.py  test_models.py  test_signals.py
(+3 files in other folders)
