[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE = "config.settings.dev"
python_files = ["tests.py", "test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]

[project]
name = "django-auth-basic"
version = "1.5.0"
description = "Production-ready Django authentication starter kit"
readme = "README.md"
requires-python = ">=3.12"

[tool.ruff]
target-version = "py312"
line-length = 88
fix = true

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP", "B", "SIM", "DJ"]
ignore = ["E501"]

[tool.ruff.lint.isort]
known-first-party = ["apps", "config"]

[tool.black]
line-length = 88
target-version = ["py312"]

[tool.mypy]
python_version = "3.12"
check_untyped_defs = true
ignore_missing_imports = true
plugins = ["mypy_django_plugin.main"]

strict = true

warn_unused_configs = true
warn_return_any = true
warn_unused_ignores = true

disallow_untyped_defs = true

exclude = "^tests"

[tool.django-stubs]
django_settings_module = "config.settings.dev"
